@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
+
 <collection type="Knives" items="68" version="1.8.0">
  <information>
   <maxId>71</maxId>
@@ -8,12 +9,8 @@
 
  <item
   gcsfield5="Indumil Combat Knife"
-  gcsfield1="../../../pics/2018-07-17/P7171360.JPG"
   gcsfield11="Indumil"
   gcsfield13="002FB001"
-  gcsfield7="../../../pics/2018-07-17/P7171362.JPG"
-  gcsfield9="../../../pics/2018-07-17/P7171361.JPG"
-  gcsfield10="../../../pics/2018-07-17/P7171363.JPG"
   gcsfield17="Wood"
   gcsfield18="Steel - 1045 or similar"
   gcsfield19="304"
@@ -29,19 +26,12 @@
   gcsfield13="066FB016"
   gcsfield14="01/06/2025"
   gcsfield15="15.65"
-  gcsfield6=".knives collection_pictures/Rihe_Mini_Utility_Knife_0"
-  gcsfield7=".knives collection_pictures/Rihe_Mini_Utility_Knife_0"
-  gcsfield8="../../../pics/2025-07-08/P7084342.JPG"
-  gcsfield9="../../../pics/2025-07-08/P7084343.JPG"
-  gcsfield10="../../../pics/2025-07-08/P7084345.JPG"
-  gcsfield23="../../../pics/2025-07-08/P7084348.JPG"
   gcsfield17="Micarta, Wood"
   gcsfield18="D2"
   gcsfield19="212"
   gcsfield26="305"
   gcsfield21="178"
   gcsfield30="3.3"
-  gcsfield24=".knives collection_pictures/Rihe_Mini_Utility_Knife_0"
   gcsfield25="EDC"
   gcsautoid="71"
  >
